# NASP

./: .gitignore  Dockerfile  Pipfile  README.md  response.txt
config/: kubeconfig
data/: data.json  kube.yaml
nasp/: .flaskenv  README.md  app.py  nohup.out  pyproject.toml  routes.py  run.sh
nasp/24401-core/: services-enabled-values.yaml
nasp/24401-core/charts/free5gc-udr/: values.yaml
nasp/24401-core/free5gc/: ulcl-enabled-values.yaml
nasp/274401-core/: ulcl-enabled-values.yaml
nasp/274401-core/charts/free5gc-ausf/: values.yaml
nasp/274401-core/charts/free5gc-n3iwf/: configuration.yaml
nasp/274401-core/charts/free5gc-nssf/: configuration.yaml  values.yaml
nasp/274401-core/charts/free5gc-smf/: ulcl-enabled-values.yaml
nasp/274401-core/charts/free5gc-udm/: configuration.yaml
nasp/274401-core/charts/free5gc-upf/: Chart.yaml  configuration.yaml
nasp/274401-core/charts/free5gc-webui/: Chart.yaml
nasp/274401-n3iwf/charts/free5gc-amf/: configuration.yaml
nasp/274401-n3iwf/charts/free5gc-smf/: configuration.yaml
nasp/274401-n3iwf/charts/free5gc-udm/: Chart.yaml
nasp/src/model/: Condutor.py
nasp/src/scripts/: deploy_core.sh
nasp/src/services/: ControllerKeyService.py  NsmfService.py  NssmfCoreService.py  NssmfRANService.py  helm_deployments.py  slice_config.py
nasp/tests/: test_nsmf_service.py
nasp/web/static/: scripts.js  style.css
nasp/web/templates/: base.html  catalog.html  dashboard-logs.html  dashboard-metrics.html  dashboard-topology.html  dashboard-tracing.html  index.html  modal.html  nsi.html  nsst.html  nst.html  table.html
(+250 files in other folders)
