[tool.poetry]
name = "nasp"
version = "0.1.0"
description = ""
authors = ["Felipe Grings <felipehgrings@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
pymongo = "^4.3.3"
kubernetes = "^26.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
